// HWID Service API
syntax = "proto3";
option go_package = "givc/modules/api/hwid";
package hwid;

message HwIdRequest {
}

message HwIdResponse {
    string Identifier = 1;          // Hardware identifier
}

service HwidService {
    // Request the hardware identifier
    rpc GetHwId(HwIdRequest) returns (HwIdResponse) {}
}
